--- a/src/components/Layout/Header/Header.css
+++ b/src/components/Layout/Header/Header.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 5000;
   padding: 1.5rem 0;
 }
 
@@ -14,6 +14,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  z-index: 5000;
 }
 
 /* Mobile styles */
